new state machine rep counter

--- a/app/config.ini
+++ b/app/config.ini
@@ -3,7 +3,6 @@ user_data_file = /home/si/Desktop/LEGARD/app/users/users.csv
 sessions_base_dir = /home/si/Desktop/LEGARD/app/user_sessions
 
 [Serial]
-# Leave port empty to auto-detect, or specify a default like /dev/ttyUSB0 or COM3
 port = 
 baudrate = 115200
 
@@ -14,10 +13,15 @@ cop_x_limit = 1
 cop_y_limit = 1
 angle_y_min = -1
 angle_y_max = 25
+velocity_y_min = -150
+velocity_y_max = 150
 
 [Logging]
 level = INFO
 
 [RepCounter]
 smoothing_window = 6
-rep_threshold = 1.0
+velocity_smoothing_window = 5
+velocity_neg_threshold = -4.0  # Very sensitive to start the rep
+velocity_pos_threshold = 8.0   # Requires a more deliberate upward push
+velocity_zero_threshold = 3.0  # To consider the velocity as zero
