some reps are skipped

--- a/app/config.ini
+++ b/app/config.ini
@@ -22,6 +22,6 @@ level = INFO
 [RepCounter]
 smoothing_window = 6
 velocity_smoothing_window = 5
-velocity_neg_threshold = -4.0  # Very sensitive to start the rep
-velocity_pos_threshold = 8.0   # Requires a more deliberate upward push
-velocity_zero_threshold = 3.0  # To consider the velocity as zero
+velocity_zero_threshold = 4.0
+velocity_min_peak_threshold = 8.0
+rep_cooldown_seconds = 1.5
