state based rep counter

--- a/app/config.ini
+++ b/app/config.ini
@@ -20,8 +20,8 @@ velocity_y_max = 150
 level = INFO
 
 [RepCounter]
-smoothing_window = 6
-velocity_smoothing_window = 5
-velocity_zero_threshold = 4.0
-velocity_min_peak_threshold = 8.0
-rep_cooldown_seconds = 1.5
+smoothing_window = 7
+velocity_smoothing_window = 7
+velocity_neg_threshold = -10.0
+velocity_pos_threshold = 10.0
+velocity_zero_threshold = 10.0
