file path errors

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ user_data_file = /home/si/Desktop/LEGARD/app/data/users/users.csv
 sessions_base_dir = /home/si/Desktop/LEGARD/app/data/user_sessions
 
 [Serial]
-port = 
+port = /dev/ttyUSB0
 baudrate = 115200
 
 [Plotting]
@@ -27,3 +27,4 @@ velocity_pos_threshold = 10.0
 velocity_zero_threshold = 10.0
 zero_velocity_timeout = 4.0
 max_angle_tolerance_percent = 50.0
+
